--- a/main/config.json
+++ b/main/config.json
@@ -1,5 +1,9 @@
 {
     "BOT_TOKEN": "xyz",
     "SERVER_ID": "804809698389393429",
-    "ROLE_ID": "804810517633564743"
+    "PREFIX": "!r",
+    "ADMIN_ROLE_ID": "",
+    "INVITE_LINK": "Q2Hw3uRk2h",
+    "AUTO_ROLE_ID": "804810517633564743",
+    "MEMBER_COUNT_CHANNEL_ID": ""
 }
