--- a/main/config.json
+++ b/main/config.json
@@ -1,10 +1,10 @@
 {
     "BOT_TOKEN": "xyz",
-    "BOT_ID": "",
+    "BOT_ID": "944508079532294144",
     "SERVER_ID": "804809698389393429",
     "PREFIX": "!r",
-    "ADMIN_ROLE_ID": "",
+    "ADMIN_ROLE_ID": "804810509622837299",
     "INVITE_LINK": "Q2Hw3uRk2h",
     "AUTO_ROLE_ID": "804810517633564743",
-    "MEMBER_COUNT_CHANNEL_ID": ""
+    "MEMBER_COUNT_CHANNEL_ID": "944578541893333022"
 }
