--- a/redacted-bot/config.json
+++ b/redacted-bot/config.json
@@ -6,6 +6,6 @@
     "ADMIN_ROLE_ID": "804810509622837299",
     "INVITE_LINK": "Q2Hw3uRk2h",
     "AUTO_ROLE_ID": "804810517633564743",
-    "MEMBER_COUNT_CHANNEL_ID": "944578541893333022"
+    "MEMBER_COUNT_CHANNEL_ID": "944578541893333022",
+    "BOT_CHANNEL_ID": "804810738979176450"
 }
-
