fix for all commands... , include axios module for future features

--- a/redacted-bot/package.json
+++ b/redacted-bot/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "axios": "^0.26.0",
         "cheerio": "^1.0.0-rc.10",
         "discord": "^0.8.2",
         "discord.js": "^13.0.1",
