--- a/redacted-bot/package.json
+++ b/redacted-bot/package.json
@@ -15,7 +15,8 @@
         "discord": "^0.8.2",
         "discord.js": "^13.0.1",
         "got": "^12.0.1",
-        "node-fetch": "^3.0.0"
+        "node-fetch": "^3.0.0",
+        "puppeteer": "^13.4.0"
     },
     "type": "module",
     "devDependencies": {
