--- a/redacted-bot/package.json
+++ b/redacted-bot/package.json
@@ -10,13 +10,21 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@discordjs/opus": "^0.5.3",
+        "avconv": "^3.1.0",
         "axios": "^0.26.0",
         "cheerio": "^1.0.0-rc.10",
         "discord": "^0.8.2",
+        "discord-player": "^5.2.2",
         "discord.js": "^13.0.1",
+        "ffmpeg": "^0.0.4",
+        "ffmpeg-static": "^4.4.1",
         "got": "^12.0.1",
-        "node-fetch": "^3.0.0",
-        "puppeteer": "^13.4.0"
+        "jquery": "^3.5.1",
+        "jsdom": "^19.0.0",
+        "node-fetch": "^3.2.2",
+        "puppeteer": "^13.4.0",
+        "undici": "^4.15.1"
     },
     "type": "module",
     "devDependencies": {
