--- a/redacted-bot/package.json
+++ b/redacted-bot/package.json
@@ -1,16 +1,15 @@
 {
     "name": "discordbot",
     "version": "1.0.0",
-    "main": "Halal.js",
+    "main": "Redacted.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node Halal.js"
+        "start": "node Redacted.js"
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "@discordjs/opus": "^0.5.3",
         "avconv": "^3.1.0",
         "axios": "^0.26.0",
         "cheerio": "^1.0.0-rc.10",
