--- a/redacted-bot/package.json
+++ b/redacted-bot/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@discordjs/opus": "^0.5.3",
         "avconv": "^3.1.0",
         "axios": "^0.26.0",
         "cheerio": "^1.0.0-rc.10",
